--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "dependencies": {
     "@casl/ability": "^6.3.2",
     "@casl/react": "^3.1.0",
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/delimiter": "^1.4.0",
     "@editorjs/editorjs": "^2.29.1",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/image": "^2.9.0",
+    "@editorjs/inline-code": "^1.5.0",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/nested-list": "^1.4.2",
+    "@editorjs/quote": "^2.6.0",
+    "@editorjs/warning": "^1.4.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@fullcalendar/core": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
@@ -67,7 +77,7 @@
     "react-feather": "~2.0.3",
     "react-flatpickr": "^3.10.12",
     "react-hook-form": "^7.39.4",
-    "react-hot-toast": "^2.4.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^12.0.0",
     "react-paginate": "^8.1.3",
     "react-perfect-scrollbar": "^1.5.8",
@@ -79,7 +89,7 @@
     "react-shepherd": "^4.1.0",
     "react-slidedown": "^2.4.7",
     "react-sortablejs": "6.0.0",
-    "reactstrap": "^9.1.5",
+    "reactstrap": "^9.2.2",
     "recharts": "^2.1.9",
     "redux": "^4.2.0",
     "redux-debounced": "0.5.0",
